# UNO

./: .gitignore  inference.py  probe.txt  pyproject.toml  res.txt  train.py
config/deepspeed/: zero3_dit_config.json
data/multibanana/3_back/: 006_prompt.txt  014_prompt.txt  023_prompt.txt  024_prompt.txt  027_prompt.txt  types.json
data/multibanana/3_global/: 004_prompt.txt  014_prompt.txt  022_prompt.txt  025_prompt.txt  028_prompt.txt  types.json
data/multibanana/3_local/: 003_prompt.txt  007_prompt.txt  010_prompt.txt  011_prompt.txt  013_prompt.txt  types.json
distill/: DISTILL_PLAN.md  REMOTE_AGENT_HANDBOOK.md  filter_data.py  floor_line.py  gen_data.py
distill/hooks/: README.md  guard_silence.py  guard_slow_bash.py  settings.snippet.json
docs/: H800_REBUILD.md  smoke_test_report.md
multibanana_eval/: README.md  board.py  download_multibanana.py  infer_multibanana.py  rebuild_comparison.py
output/multibanana_eval/: results.json
output/smoke_ref320_ckpt7000/: results.json
output/smoke_ref512/: results.json
output/smoke_ref_isolation/: results.json
reports/20260723-0913-m0-preflight/: REPORT.md  env.txt
reports/20260724-0615-m1-tmp-ext-error/: REPORT.md  cmd.txt  env-data.txt  env-disk.txt  env-git.txt  env-gpu.txt  env-pkgs.txt  env-vars.txt  stdout.txt
reports/20260724-0615-m1-tmp-ext-error/extra/: failures_shard0.json
scripts/: bench_kv_cache.log.txt  bench_kv_cache.py  convert_uno_labels.py  fetch_torch_wheels.sh  probe_env.sh  probe_net.sh  probe_pypi.sh  setup.log.txt  setup_env.sh  setup_env_h800.sh  smoke_ref_isolation.py  speedtest_mirrors.sh  train_ref_isolation.sh
uno/flux/: math.py  model.py  pipeline.py  ref_attention.py  sampling.py
uno/flux/modules/: layers.py
